# noir-stylus-verifier

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: cli-build.yml  cli-release.yml  docs-build.yml  e2e-tests.yml  integration-tests.yml  rust-build.yml  rust-lint.yml  rust-setup.yml  rust-test.yml  rust_build.yml  rust_lint.yml  rust_test.yml  stylus-check.yml  stylus_check.yml
.github/workflows_off/: e2e-tests.yml  integration-tests.yml  rust-build.yml  rust-test.yml  rust_test.yml  stylus_check.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: check.rs  deploy.rs  generate.rs  init.rs  mod.rs  new.rs  prove.rs  verify.rs
cli/src/config/: constants.rs  mod.rs  requirements.rs
cli/src/infrastructure/: bb.rs  codegen.rs  mod.rs  nargo.rs  progress.rs  requirements.rs  rpc.rs  stylus.rs  system.rs  terminal.rs  utils.rs
cli/src/infrastructure/codegen/: mod.rs  verifier_generator.rs
cli/src/infrastructure/codegen/templates/src/: lib.rs.tera
cli/src/infrastructure/console/: dialoger.rs  mod.rs  progress.rs  terminal.rs
cli/src/infrastructure/downloader/: github.rs
cli/src/infrastructure/system/: mod.rs  system.rs
cli/src/infrastructure/templates/: mod.rs
cli/src/infrastructure/templates/project/: README.md.tera  package.json.tera
cli/src/infrastructure/templates/project/circuit/: Nargo.toml.tera
cli/src/infrastructure/templates/project/scripts/: verify-global.js.tera  verify.js.tera
cli/src/infrastructure/templates/verifier/src/: lib.rs.tera
cli/tests/: check.rs  deploy.rs  generate.rs  help.rs  new.rs  prove.rs  verify.rs  version.rs
cli/tests/fixtures/hello_world/kat/: proof  proof_zk  vk
co-noir/co-acvm/: Cargo.toml
co-noir/co-acvm/src/: lib.rs  mpc.rs  solver.rs
co-noir/co-acvm/src/mpc/: plain.rs
co-noir/co-brillig/: Cargo.toml
co-noir/co-brillig/src/: mpc.rs
co-noir/co-builder/: Cargo.toml
co-noir/co-builder/src/: builder.rs  lib.rs  prelude.rs  utils.rs
co-noir/common/: Cargo.toml
co-noir/common/src/: circuits.rs  lib.rs
co-noir/common/src/gadgets/poseidon2/: mod.rs
co-noir/ultrahonk/: Cargo.toml
co-noir/ultrahonk/src/: builder.rs  keccak_hash.rs  lib.rs  prelude.rs  serialize.rs  sponge_hasher.rs  transcript.rs  types.rs  verifier.rs
co-noir/ultrahonk/tests/: plain.rs
contracts/: Cargo.toml
contracts/src/: lib.rs  main.rs
contracts/src/contracts/: mod.rs
contracts/src/contracts/core/: mod.rs  shplemini_verifier.rs  sumcheck_verifier.rs  verifier.rs
contracts/src/contracts/test/: precompile.rs
contracts/src/contracts/test_contracts/: precompile.rs
contracts/src/utils/: backends.rs  constants.rs  helpers.rs  macros.rs  mod.rs
docs/: cli.md  contribute.md  deployments.md  getting-started.md  package-lock.json  package.json  pnpm-lock.yaml  requirements.md  specification.md  tailwind.config.ts
docs/app/: layout.tsx  page.tsx
docs/components/: flow-field.tsx  footer.tsx  navbar.tsx  sublink.tsx  theme-toggle.tsx  toc-observer.tsx
docs/lib/: markdown.ts  routes-config.ts
docs/nsv-security-audit/: README.md
docs/nsv-security-audit/docs/: 1_package_manifest.md  2_client_findings_summary.md  3_testing_methodology.md  4_verification_compatibility.md  5_environment_setup.md
docs/nsv-security-audit/findings/: NSV_CLI_003.md  NSV_CLI_004.md  NSV_DOC_001.md  NSV_DOC_002.md  NSV_EXM_001.md
docs/styles/: globals.css
docs/tutorials/: building-a-voting-app.md  building-a-zk-battleship-game.md
examples/battleship/: README.md  package.json  pnpm-lock.yaml
examples/battleship/contracts/: Cargo.toml  rust-toolchain.toml
examples/hello_world/: .gitignore  README.md  justfile  package.json  pnpm-lock.yaml
examples/hello_world/contracts/: Cargo.toml  rust-toolchain.toml
examples/hello_world/scripts/: verify-global.js  verify.js
examples/voting/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  voters.json
examples/voting/app/: cli.ts
examples/voting/circuits/: Nargo.toml  Prover.toml
examples/voting/contracts/: Cargo.toml
integration/: Cargo.toml
integration/src/: abis.rs  errors.rs  main.rs  types.rs  utils.rs
integration/src/tests/: backends.rs  verifier.rs
reviews/22-08-25/: README.md
reviews/22-08-25/docs/: 1_package_manifest.md  2_client_findings_summary.md  3_testing_methodology.md  4_verification_compatibility.md  5_environment_setup.md
reviews/22-08-25/findings/: NSV_CLI_001.md  NSV_CLI_002.md  NSV_CLI_003.md  NSV_CLI_004.md  NSV_DOC_001.md  NSV_DOC_002.md  NSV_ENV_001.md
scripts/: compile-test-vectors.sh  e2e-tests.sh  nitro-testnode.sh  test-e2e.sh
test_vectors/: compile.sh
test_vectors/add3u64/kat/: add3u64.json  public_inputs  vk  zk-proof
test_vectors/addition_multiplication/kat/: proof  public_inputs  vk  zk-proof
test_vectors/approx_sigmoid/kat/: proof  vk  zk-proof
test_vectors/assert/kat/: proof  vk  zk-proof
test_vectors/bb_sha256_compression/kat/: proof  public_inputs  vk  zk-proof
test_vectors/get_bytes/kat/: proof  public_inputs  vk  zk-proof
test_vectors/if_then/kat/: proof  vk  zk-proof
test_vectors/negative/kat/: proof  vk  zk-proof
test_vectors/poseidon/kat/: zk-proof
test_vectors/poseidon2/kat/: proof  public_inputs  vk  zk-proof
test_vectors/poseidon_assert/kat/: proof  public_inputs  vk  zk-proof
test_vectors/poseidon_input2/kat/: vk  zk-proof
test_vectors/poseidon_stdlib/kat/: proof  public_inputs  vk  zk-proof
test_vectors/quantized/kat/: proof  public_inputs  vk  zk-proof
test_vectors/quantized/src/: main.nr
test_vectors/random_access/kat/: proof  public_inputs  vk  zk-proof
test_vectors/slice/kat/: proof  vk  zk-proof
test_vectors/to_radix32/kat/: proof  public_inputs  zk-proof
test_vectors/unconstrained_fn/kat/: proof  vk  zk-proof
test_vectors/unconstrained_fn_field/kat/: proof  vk  zk-proof
test_vectors/write_access/kat/: proof  public_inputs  vk  zk-proof
tests/: Cargo.toml
tests/src/: lib.rs
(+135 files in other folders)
