[workspace]
members = ["packages/ultrahonk", "packages/contracts", "packages/ark-ec"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.85"
authors = ["Wakeuplabs <hello@wakeuplabs.io>"]
homepage = "https://www.wakeuplabs.io"
repository = "https:://github.com/wakeuplabs/noir-stylus-verifier"
license = "MIT OR Apache-2.0"
publish = false
readme = "./README.md"

[workspace.dependencies]
stylus-sdk = { version = "=0.9.0" }
ark-bn254 = "^0.5.0"
ark-ff = "^0.5.0"
ark-ec = "^0.5.0"
ark-grumpkin = "^0.5.0"
ark-poly = { version = "^0.5.0", default-features = false }
ark-serialize = { version = "^0.5.0", features = ["derive", "std"] }
getrandom = { version = "0.2", features = ["js"] }
num-bigint = { version = "0.4.5", default-features = false }
num-traits = { version = "0.2.18", default-features = false }
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive", "rc"] }
sha3 = "0.10.8"
thiserror = "2"
tracing = { version = "0.1.40" }
serde_with = { version = "3.4", default-features = false, features = [
    "macros",
    "alloc",
] }
postcard = { version = "1.0.0", default-features = false, features = ["alloc"] }

alloy = { version = "=0.7.3", features = [
  "contract",
  "network",
  "providers",
  "provider-http",
  "rpc-client",
  "rpc-types-eth",
  "signer-local",
  "getrandom",
] }
# Even though `alloy` includes `alloy-primitives` and `alloy-sol-types` we need
# to keep both versions for compatibility with the Stylus SDK. Once they start
# using `alloy` we can remove these.
alloy-primitives = { version = "=0.8.20", default-features = false, features = [
  "tiny-keccak",
] }
alloy-sol-types = { version = "=0.8.20", default-features = false }
alloy-sol-macro = { version = "=0.8.20", default-features = false }
alloy-sol-macro-expander = { version = "=0.8.20", default-features = false }
alloy-sol-macro-input = { version = "=0.8.20", default-features = false }
spin = { version = "0.10.0" }

e2e = { git = "https://github.com/OpenZeppelin/rust-contracts-stylus", tag = "v0.2.0-rc.0" }

[patch.crates-io]
ark-ec = { path = "./packages/ark-ec" }

[profile.release]
codegen-units = 1        # prefer efficiency to compile time
panic = "abort"          # use simple panics
strip = true             # remove debug info
lto = true               # link time optimization
debug = false            # no debug data
rpath = false            # no run-time search path
debug-assertions = false # prune debug assertions
incremental = false      # no incremental builds
opt-level = 's'          # optimize for size

# This profile can be used for CI in pull requests.
[profile.ci-dev]
opt-level = 1
inherits = "dev"
incremental = false
debug = true
overflow-checks = false
# [profile.ci-dev.build-override]
# opt-level = 3
