[package]
name = "nsv"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
include.workspace = true
categories.workspace = true

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
dotenv = "0.15.0"
tokio = { version = "1.40.0", features = ["full"] }
colored = "3.0.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
indicatif = "0.18.0"
dialoguer = "0.11.0"
env_logger = "0.11.5"
mockall = "0.13.1"
semver = "1.0.23"
regex = "1.11.1"

[dev-dependencies]
assert_cmd = "2.0.10"
predicates = "3.1.3"