[package]
name = "nsv"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
include.workspace = true
categories.workspace = true

[dependencies]
clap.workspace = true
dotenv.workspace = true
tokio.workspace = true
colored.workspace = true
log.workspace = true
pretty_env_logger.workspace = true
indicatif.workspace = true
dialoguer.workspace = true
env_logger.workspace = true
mockall.workspace = true
semver.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["rustls-tls", "json"], default-features = false }
zip.workspace = true
serde_json.workspace = true
tera.workspace = true
toml.workspace = true
alloy.workspace = true
async-trait.workspace = true
thiserror.workspace = true
openssl.workspace = true

[dev-dependencies]
assert_cmd = "2.0.10"
predicates = "3.1.3"
tempfile = "3.8.0"