[package]
name = "integration"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
include.workspace = true
categories.workspace = true


[dependencies]
alloy = { workspace = true, default-features = true, features = ["rand"] }
alloy-contract = { workspace = true }
alloy-primitives = { workspace = true, features = ["tiny-keccak"] }
alloy-sol-types = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
rand = { workspace = true }
clap = { workspace = true, features = ["env"] }
postcard = { workspace = true }
serde = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
num-bigint = "0.4"
thiserror = { workspace = true }
inventory = { workspace = true }
futures = { workspace = true }
colored = { workspace = true }
ultrahonk = { path = "../packages/ultrahonk" }
contracts = { path = "../contracts" }
sha3.workspace = true
ark-bn254.workspace = true
ark-serialize.workspace = true
hex = { workspace = true }
regex = { workspace = true }
paste = { workspace = true }