[package]
name = "common"
version = "0.5.0"
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ark-ff.workspace = true
ark-bn254.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
rand.workspace = true
ark-serialize.workspace = true
serde.workspace = true


[dev-dependencies]
